@@ -51,14 +51,14 @@ import static io.kestra.core.utils.Rethrow.throwFunction;
             """
         )
     }
-    
+
 )
 public class List extends Task implements RunnableTask<List.Output> {
 
     @Inject
     @Builder.Default
     private NfsService nfsService = NfsService.getInstance();
-    
+
     @Schema(title = "The directory path to list from.")
     @NotNull
     private Property<String> from;
@@ -69,6 +69,12 @@ public class List extends Task implements RunnableTask<List.Output> {
     @Schema(title = "Whether to list files recursively.")
     @Builder.Default
     private Property<Boolean> recursive = Property.ofValue(false);
+
+    @Builder.Default
+    @Schema(
+        title = "The maximum number of files to retrieve at once"
+    )
+    private Property<Integer> maxFiles = Property.ofValue(25);
 
     @Override
     public Output run(RunContext runContext) throws Exception {
@@ -89,18 +95,26 @@ public class List extends Task implements RunnableTask<List.Output> {
             if (rRecursive) {
                 filteredStream = filteredStream.filter(path -> !path.equals(fromPath));
             }
-            
+
             if (rRegExp.isPresent()) {
-                String finalRegExp = rRegExp.get(); 
+                String finalRegExp = rRegExp.get();
                 filteredStream = filteredStream.filter(path -> path.toString().matches(finalRegExp));
             }
 
             files = filteredStream
                 .map(throwFunction(this::mapToFile))
-                .collect(Collectors.toList());
+                .toList();
         }
 
         logger.info("Found {} files matching the criteria.", files.size());
+
+        int rMaxFiles = runContext.render(this.maxFiles).as(Integer.class).orElse(25);
+        if (files.size() > rMaxFiles) {
+            logger.warn("Too many files to process, skipping");
+            return Output.builder()
+                .files(java.util.List.of())
+                .build();
+        }
 
         return Output.builder().files(files).build();
     }
@@ -128,7 +142,7 @@ public class List extends Task implements RunnableTask<List.Output> {
         private final java.util.List<File> files;
     }
 
-    @SuperBuilder 
+    @SuperBuilder
     @Getter
     @EqualsAndHashCode
     @ToString
